# py_polyhedral

./: README.md  pyproject.toml  setup.py
py_polyhedral/: __init__.py  binaries.py
src/: binaries.py
tests/: test_binaries.py
